# aoc25-rs

./: .gitignore  Cargo.toml  mise.toml  profile-shim.sh
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  intmap.rs  iterext.rs  lib.rs
tests/: all.rs
